controller/src/snapshots/controller__project__test__can_deploy_model-2.snap
---
source: controller/src/project.rs
expression: "&ingresses.get(&model_name).await?.spec"
---
ingressClassName: nginx
rules:
  - host: testhost
    http:
      paths:
        - backend:
            service:
              name: test
              port:
                number: 5000
          pathType: ImplementationSpecific
tls:
  - hosts:
      - testhost
    secretName: test-tls

