controller/src/snapshots/controller__project__test__produces_valid_ingress.snap
---
source: controller/src/project.rs
expression: "&project.spec.models.unwrap().clone()[0].generate_model_ingress(&ctrl_cfg)?"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  labels:
    ame-model: test
  name: test
spec:
  ingressClassName: nginx
  rules:
    - host: testhost
      http:
        paths:
          - backend:
              service:
                name: test
                port:
                  number: 5000
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - testhost
      secretName: test-tls

