controller/src/snapshots/controller__project__test__produces_valid_service.snap
---
source: controller/src/project.rs
expression: "&project.spec.models.unwrap().clone()[0].generate_model_service(&ctrl_cfg)?"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    ame-model: test
  name: test
spec:
  ports:
    - port: 5000
  selector:
    ame-model: test

